# mvp-engine

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  QUICKSTART.html  QUICKSTART.md  QUICKSTART_COOKBOOK.html  QUICKSTART_ch.html  QUICKSTART_en.html  README.md  playground.py  pyproject.toml
.codex/agents/: code-reviewer.toml  novice-coder.toml  skill-diagnoser.toml  skill-writer.toml  tester.toml  writing-supervisor.toml
.github/workflows/: ai-auto-approve.yml  deploy-tutorial.yml  lint.yml
batch_files/: download.sh  install_cv_reader.sh  run_video_vlm_demo.sh
docs/tutorial/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
docs/tutorial/src/: App.tsx
mvp_engine/: launch.py
mvp_engine/config/: check.py  default.yaml  schema.py
mvp_engine/dataset/: webdataset.py
mvp_engine/distributed/: __init__.py  cp.py  device_mesh.py  fsdp2.py  init.py  parallel_mesh.py  parallelize.py  tp.py  ulysses.py  utils.py
mvp_engine/engine/: __init__.py  engine.py  goal_spec.py
mvp_engine/kit/: __init__.py  _lazy.py
mvp_engine/kit/llm/: __init__.py  model.py
mvp_engine/kit/loss/: __init__.py  loss.py  token_loss.py
mvp_engine/kit/mllm/: __init__.py  model.py
mvp_engine/kit/model/: __init__.py  liger.py
mvp_engine/kit/optim/: __init__.py  optim.py
mvp_engine/kit/parallel/: __init__.py  cp.py
mvp_engine/kit/perf/: __init__.py  mfu.py
mvp_engine/kit/util/: __init__.py  step_counting.py
mvp_engine/patches/: __init__.py  registry.py  torch_fsdp2.py  types.py
mvp_engine/skills/: README.md  README.zh-CN.md
mvp_engine/skills/cn/: README.md
mvp_engine/skills/en/: README.md
mvp_engine/skills/model/: README.zh-CN.md
mvp_engine/skills/zh-cn/: README.md
mvp_engine/test/: recipe_probe.py
mvp_engine/testing/: utils.py
mvp_engine/utils/: __init__.py  metrics.py  misc.py  registry.py  skill_testing_util.py  training.py
mvp_engine/utils/checkpointing/: parallel_sl_util.py
mvp_engine/utils/distributed/: ddp.py  utils.py
mvp_engine/utils/log/: __init__.py  logger.py  metric.py  timer.py
playground/: cp_equivalence_demo.py
recipes/basic_vlm/: README.md  __init__.py
recipes/basic_vlm/configs/: __init__.py  schema.py  stage1.yaml  stage2.yaml  stage3.yaml
recipes/basic_vlm/dataset/: __init__.py  collator.py  dataset.py  packing.py  preprocess.py  preprocess_v2.py  processor.py  skip.py  splitter.py  types.py
recipes/basic_vlm/engine/: __init__.py  basic_vlm_engine.py
recipes/interleaved/: README.md  __init__.py
recipes/magic_transformer/: README.md  __init__.py
recipes/minimal_vlm/: README.md  __init__.py  types.py
recipes/openbee/: README.md  __init__.py
recipes/panguvl/: README.md  __init__.py
recipes/qwen2_5_vl/: README.md  __init__.py
recipes/qwen3/: README.md  __init__.py
recipes/qwen3_lm/: README.md  __init__.py
recipes/qwen3_pt/: README.md  __init__.py
recipes/qwen3_vl/: README.md  __init__.py
recipes/video_mllm/: __init__.py
recipes/video_vlm/: README.md  __init__.py
recipes/vit_classification/: README.md  __init__.py
skills/: AGENTS.md  README.md
skills/en/: README.md  rules-en.md
skills/zh-cn/: README.md  rules-zhcn.md
tests/: conftest.py  test_auto_research_backend.py  test_config_schema.py  test_kit_mllm_video.py  test_launch.py  test_liger_kernel_kit.py  test_log.py  test_minimal_vlm_dataset.py  test_runtime_template.py  test_skill_testing_util.py  test_skills.py  test_smoke_template.py  test_structure_template.py
tests/templates/: test_contract.py.template  test_parity.py.template  test_smoke.py.template  test_structure.py.template
tools/: plot_training_logs.py
tools/dataviewer/: README.md  app.py  requirements.txt
(+740 files in other folders)
