[tool.black]
line-length = 120

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[tomli]>=6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mvp_engine"
version = "0.0.1"
authors = [{name = "MVP-Lab"}]
description = "A simple, unified multimodal models training engine. Lean, flexible, and built for hacking, and hacking at scale."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "addict",
    "datasets",
    "transformers",
    "accelerate",
    "pyyaml",
    "wandb",
    "hydra-core",
    "omegaconf",
    "webdataset",
    "rich",
    "pydantic>=2.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[project.optional-dependencies]
gpu = [
    "nvidia-dali-cuda120",
]
npu = [
    "torch_npu",
]

[tool.setuptools.packages.find]
where = ["mvp_engine"]
include = ["*"]
exclude = [
    "test"
]

[tool.wheel]
exclude = [
    "test"
]

[project.urls]
Homepage = "https://github.com/mvp-ai-lab/mvp-engine"
Repository = "https://github.com/mvp-ai-lab/mvp-engine"

[tool.isort]
known_third_party = ["wandb"]
